--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 </head>
 <body>
 
+  <input id="p1" placeholder="Player 1 Color">
+  <input id="p2" placeholder="Player 2 Color">
+  <button id="start">Start!</button>
+
+
 <div id="game">
   <table id="board"></table>
 </div>
